--- a/Hextasy.XInARow/XInARowGameView.xaml
+++ b/Hextasy.XInARow/XInARowGameView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Hextasy.FourInARow.FourInARowGameView"
+﻿<UserControl x:Class="Hextasy.XInARow.XInARowGameView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:framework="clr-namespace:Hextasy.Framework;assembly=Hextasy.Framework"
              xmlns:cal="http://www.caliburnproject.org"
-             xmlns:fourInARow="clr-namespace:Hextasy.FourInARow"
+             xmlns:xInARow="clr-namespace:Hextasy.XInARow"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -48,7 +48,7 @@
             </Setter>
         </Style>
 
-        <DataTemplate DataType="{x:Type fourInARow:HexagonField}">
+        <DataTemplate DataType="{x:Type xInARow:HexagonField}">
             <Button Style="{StaticResource HexagonButtonStyle}"
                           Background="DarkGray"
                           cal:Message.Attach="SelectTile($dataContext)"/>
