--- a/Hextasy/SettingsShellView.xaml
+++ b/Hextasy/SettingsShellView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Hextasy.SettingsView"
+﻿<UserControl x:Class="Hextasy.SettingsShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
