--- a/Hextasy.JumpToKill/JumpToKillGameView.xaml
+++ b/Hextasy.JumpToKill/JumpToKillGameView.xaml
@@ -1,20 +1,20 @@
-﻿<UserControl x:Class="Hextasy.LightsOff.LightsOffGameView"
+﻿<UserControl x:Class="Hextasy.JumpToKill.JumpToKillGameView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:cal="http://www.caliburnproject.org"
-             xmlns:lightsOff="clr-namespace:Hextasy.LightsOff"
              xmlns:framework="clr-namespace:Hextasy.Framework;assembly=Hextasy.Framework"
+             xmlns:cal="http://www.caliburnproject.org"
+             xmlns:jumpToKill="clr-namespace:Hextasy.JumpToKill"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
-        <Style x:Key="HexagonButtonStyle" TargetType="{x:Type ToggleButton}">
+        <Style x:Key="HexagonButtonStyle" TargetType="{x:Type Button}">
             <Setter Property="BorderBrush" Value="Black"/>
             <Setter Property="BorderThickness" Value="29"></Setter>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <ControlTemplate TargetType="{x:Type Button}">
                         <Grid>
                             <Path Margin="1" 
                               StrokeThickness="{TemplateBinding BorderThickness}" 
@@ -22,22 +22,46 @@
                               Fill="{TemplateBinding Background}" 
                               HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" 
                               Height="Auto" x:Name="Path" Stretch="Fill"
-                                  RenderTransformOrigin="0.5, 0.5"
+                              RenderTransformOrigin="0.5, 0.5"
                               Data="M 250,0 L 750,0 L 1000,433 L 750,866 L 250,866 L 0,433 Z">
                             </Path>
                             <Path Margin="1" 
                               Fill="WhiteSmoke" 
                               HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" 
                               Height="Auto" x:Name="Overlay" Stretch="Fill" Opacity="0"
-                                  RenderTransformOrigin="0.5, 0.5"
+                              RenderTransformOrigin="0.5, 0.5"
                               Data="M 250,0 L 750,0 L 1000,433 L 750,866 L 250,866 L 0,433 Z">
+                            </Path>
+                            <Path Margin="1" 
+                              Stroke="Black" StrokeThickness="1"
+                              Fill="{TemplateBinding Background}" 
+                              HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" 
+                              Height="Auto" x:Name="PlayerToken" Stretch="Fill"
+                              RenderTransformOrigin="0.5, 0.5"
+                              Data="M 250,0 L 750,0 L 1000,433 L 750,866 L 250,866 L 0,433 Z">
+                                <Path.RenderTransform>
+                                    <ScaleTransform ScaleX="0.75" ScaleY="0.75"/>
+                                </Path.RenderTransform>
                             </Path>
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                         <ControlTemplate.Triggers>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter TargetName="Path" Property="Fill" Value="Red"/>
-                            </Trigger>
+                            <DataTrigger Binding="{Binding Owner}" Value="None">
+                                <Setter TargetName="PlayerToken" Property="Opacity" Value="0"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding Owner}" Value="Player1">
+                                <Setter TargetName="PlayerToken" Property="Fill" Value="Red"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding Owner}" Value="Player2">
+                                <Setter TargetName="PlayerToken" Property="Fill" Value="Blue"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                                <Setter TargetName="Path" Property="Fill" Value="Orange"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding IsLegalMoveTarget}" Value="True">
+                                <Setter TargetName="Overlay" Property="Opacity" Value="0.5"/>
+                                <Setter TargetName="Overlay" Property="Fill" Value="GreenYellow"/>
+                            </DataTrigger>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter TargetName="Overlay" Property="Opacity" Value="0.5"/>
                             </Trigger>
@@ -60,15 +84,13 @@
             </Setter>
         </Style>
 
-        <DataTemplate DataType="{x:Type lightsOff:LightsOffTile}">
-            <ToggleButton Style="{StaticResource HexagonButtonStyle}"
-                          Background="DarkGray"
-                          IsChecked="{Binding IsChecked}"
-                          cal:Message.Attach="ToggleButton($dataContext)"/>
+        <DataTemplate DataType="{x:Type jumpToKill:JumpToKillTile}">
+            <Button Style="{StaticResource HexagonButtonStyle}" Background="DarkGray"
+                    cal:Message.Attach="[Event Click] = [Action OnMouseClick($dataContext)];[Event MouseEnter] = [Action OnMouseEnter($dataContext)];[Event MouseLeave] = [Action OnMouseLeave($dataContext)]"/>
         </DataTemplate>
 
     </UserControl.Resources>
-    
+
     <Grid>
         <ItemsControl ItemsSource="{Binding Tiles}" HorizontalAlignment="Center" VerticalAlignment="Center">
             <ItemsControl.ItemsPanel>
@@ -78,5 +100,6 @@
             </ItemsControl.ItemsPanel>
         </ItemsControl>
     </Grid>
-    
+
 </UserControl>
+
