--- a/Hextasy.CardWars/CardControl.xaml
+++ b/Hextasy.CardWars/CardControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             Height="50" Width="350"
+             Height="50"
              d:DesignHeight="50" d:DesignWidth="250">
   <Grid>
     <Grid.ColumnDefinitions>
@@ -14,7 +14,6 @@
       <ColumnDefinition Width="Auto"/>
       <ColumnDefinition Width="Auto"/>
     </Grid.ColumnDefinitions>
-    <Border Background="BurlyWood" Grid.ColumnSpan="5" CornerRadius="10" BorderBrush="Black" BorderThickness="2"/>
     <Grid Grid.Column="0">
       <Grid.RowDefinitions>
         <RowDefinition Height="*"/>
