--- a/Hextasy.CardWars/CardWarsGameView.xaml
+++ b/Hextasy.CardWars/CardWarsGameView.xaml
@@ -1,173 +1,22 @@
-﻿<UserControl x:Class="Hextasy.CardWars.CardWarsGameView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:cal="http://www.caliburnproject.org"
-             xmlns:framework="clr-namespace:Hextasy.Framework;assembly=Hextasy.Framework"
-             xmlns:cardWars="clr-namespace:Hextasy.CardWars"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+﻿<UserControl 
+  x:Class="Hextasy.CardWars.CardWarsGameView"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:framework="clr-namespace:Hextasy.Framework;assembly=Hextasy.Framework"
+  xmlns:cardWars="clr-namespace:Hextasy.CardWars"
+  xmlns:cal="http://www.caliburnproject.org"
+  mc:Ignorable="d" 
+  d:DesignHeight="300" d:DesignWidth="300"
+  cal:Message.Attach="[Event PreviewKeyUp] = [Action PreviewKeyUp($eventArgs)];">
+
   <UserControl.Resources>
-    <framework:DoubleMultiplierConverter x:Key="DoubleMultiplierConverter" />
-
-    <Style x:Key="HexagonButtonStyle" TargetType="{x:Type Button}">
-      <Setter Property="BorderBrush" Value="Black"/>
-      <Setter Property="BorderThickness" Value="29"/>
-      <Setter Property="RenderTransformOrigin" Value="0.5,0.5"/>
-      <Setter Property="Template">
-        <Setter.Value>
-          <ControlTemplate TargetType="{x:Type Button}">
-            <Grid>
-              <Path Margin="1" 
-                    StrokeThickness="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType=Button}, 
-                        Path=ActualHeight, Converter={StaticResource DoubleMultiplierConverter},ConverterParameter=0.05}"
-                    Stroke="Gray" 
-                    Fill="{TemplateBinding Background}" 
-                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" 
-                    Height="Auto" x:Name="Path" Stretch="Fill"
-                    RenderTransformOrigin="0.5, 0.5"
-                    Data="M 250,0 L 750,0 L 1000,433 L 750,866 L 250,866 L 0,433 Z">
-              </Path>
-              <Path Margin="1" 
-                    Fill="WhiteSmoke" 
-                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" 
-                    Height="Auto" x:Name="Overlay" Stretch="Fill" Opacity="0"
-                    RenderTransformOrigin="0.5, 0.5"
-                    Data="M 250,0 L 750,0 L 1000,433 L 750,866 L 250,866 L 0,433 Z">
-              </Path>
-              <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-              <Image x:Name="RotateImage" Stretch="Uniform" 
-                     Margin="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType=Button}, 
-                        Path=ActualHeight, Converter={StaticResource DoubleMultiplierConverter},ConverterParameter=0.20}"
-                     Source="Images\crosshair.png" Opacity="0" RenderTransformOrigin="0.5, 0.5">
-                <Image.RenderTransform>
-                  <ScaleTransform CenterX="0.5" CenterY="0.5" ScaleX="1" ScaleY="1"/>
-                </Image.RenderTransform>
-              </Image>
-            </Grid>
-            <ControlTemplate.Triggers>
-              <DataTrigger Binding="{Binding Owner}" Value="Player1">
-                <Setter TargetName="Path" Property="Stroke" Value="Red"/>
-              </DataTrigger>
-              <DataTrigger Binding="{Binding Owner}" Value="Player2">
-                <Setter TargetName="Path" Property="Stroke" Value="Blue"/>
-              </DataTrigger>
-              <DataTrigger Binding="{Binding Card.IsExhausted}" Value="False">
-                <Setter TargetName="Path" Property="Fill" Value="GreenYellow"/>
-              </DataTrigger>
-              <DataTrigger Binding="{Binding IsSelected}" Value="True">
-                <Setter TargetName="Path" Property="Fill" Value="Orange"/>
-              </DataTrigger>
-              <Trigger Property="IsMouseOver" Value="True">
-                <Setter TargetName="Overlay" Property="Opacity" Value="0.5"/>
-              </Trigger>
-              <MultiTrigger>
-                <MultiTrigger.Conditions>
-                  <Condition Property="IsMouseOver" Value="True"></Condition>
-                </MultiTrigger.Conditions>
-                <MultiTrigger.EnterActions>
-                  <BeginStoryboard>
-                    <BeginStoryboard.Storyboard>
-                      <Storyboard RepeatBehavior="Forever">
-                        <DoubleAnimation
-                              Storyboard.TargetName="RotateImage"
-                              Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
-                              From="1" To="1.1" Duration="0:0:1" >
-                          <DoubleAnimation.EasingFunction>
-                            <ElasticEase Oscillations="3" EasingMode="EaseOut"/>
-                          </DoubleAnimation.EasingFunction>
-                        </DoubleAnimation>
-                        <DoubleAnimation
-                              Storyboard.TargetName="RotateImage"
-                              Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)"
-                              From="1" To="1.1" Duration="0:0:1" >
-                          <DoubleAnimation.EasingFunction>
-                            <ElasticEase Oscillations="3" EasingMode="EaseOut"/>
-                          </DoubleAnimation.EasingFunction>
-                        </DoubleAnimation>
-                      </Storyboard>
-                    </BeginStoryboard.Storyboard>
-                  </BeginStoryboard>
-                </MultiTrigger.EnterActions>
-                <Setter TargetName="RotateImage" Property="Opacity" Value="1"/>
-              </MultiTrigger>
-
-              <Trigger Property="IsPressed" Value="True">
-                <Setter Property="RenderTransform">
-                  <Setter.Value>
-                    <ScaleTransform ScaleX="0.95" ScaleY="0.95"/>
-                  </Setter.Value>
-                </Setter>
-                <Setter TargetName="Overlay" Property="Opacity" Value="0.5"/>
-              </Trigger>
-            </ControlTemplate.Triggers>
-          </ControlTemplate>
-        </Setter.Value>
-      </Setter>
-    </Style>
-
-    <DataTemplate DataType="{x:Type cardWars:CardWarsTile}">
-      <Button x:Name="B1" Style="{StaticResource HexagonButtonStyle}" Background="LightGray"
-                    cal:Message.Attach="[Event Click] = [Action OnMouseClick($dataContext)];[Event MouseEnter] = [Action OnMouseEnter($dataContext)];[Event MouseLeave] = [Action OnMouseLeave($dataContext)]">
-        <Button.Content>
-          <Grid>
-            <Grid.RowDefinitions>
-              <RowDefinition Height="3*"/>
-              <RowDefinition Height="2*"/>
-              <RowDefinition Height="3*"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="20*"/>
-              <ColumnDefinition Width="35*"/>
-              <ColumnDefinition Width="20*"/>
-            </Grid.ColumnDefinitions>
-
-            <Image Source="{Binding Card.ImageSource}" Grid.ColumnSpan="3" Grid.RowSpan="3" 
-                   Margin="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType=Button}, 
-                        Path=ActualHeight, Converter={StaticResource DoubleMultiplierConverter},ConverterParameter=0.15}"/>
-
-            <Viewbox Grid.Row="1" Grid.Column="0" StretchDirection="Both" Stretch="Uniform">
-              <TextBlock Text="{Binding Card.Attack}" FontWeight="Bold"
-                           HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock.Style>
-                  <Style>
-                    <Style.Triggers>
-                      <DataTrigger Binding="{Binding Card.HasIncreasedAttack}" Value="True">
-                        <Setter  Property="TextBlock.Foreground" Value="LimeGreen"></Setter>
-                      </DataTrigger>
-                      <DataTrigger Binding="{Binding Card.HasDecreasedAttack}" Value="True">
-                        <Setter  Property="TextBlock.Foreground" Value="Red"></Setter>
-                      </DataTrigger>
-                    </Style.Triggers>
-                  </Style>
-                </TextBlock.Style>
-              </TextBlock>
-            </Viewbox>
-
-            <Viewbox Grid.Row="1" Grid.Column="2" StretchDirection="Both" Stretch="Uniform">
-              <TextBlock Text="{Binding Card.Health}" FontWeight="Bold"
-                           HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock.Style>
-                  <Style>
-                    <Style.Triggers>
-                      <DataTrigger Binding="{Binding Card.HasIncreasedHealth}" Value="True">
-                        <Setter  Property="TextBlock.Foreground" Value="LimeGreen"></Setter>
-                      </DataTrigger>
-                      <DataTrigger Binding="{Binding Card.HasDecreasedHealth}" Value="True">
-                        <Setter  Property="TextBlock.Foreground" Value="Red"></Setter>
-                      </DataTrigger>
-                    </Style.Triggers>
-                  </Style>
-                </TextBlock.Style>
-              </TextBlock>
-            </Viewbox>
-
-          </Grid>
-        </Button.Content>
-      </Button>
-    </DataTemplate>
-
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Styles.xaml"/>
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
   </UserControl.Resources>
 
   <Grid>
@@ -177,102 +26,24 @@
     </Grid.ColumnDefinitions>
 
     <Grid>
-      <ListBox ItemsSource="{Binding CurrentCards}" Width="370" HorizontalContentAlignment="Center">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="Auto"/>
+      </Grid.RowDefinitions>
+      <ListBox ItemsSource="{Binding CurrentCards}" SelectedItem="{Binding SelectedCard}"
+               Width="370" HorizontalContentAlignment="Center" ItemContainerStyle="{StaticResource CardSelectionContainerStyle}">
         <ListBox.Resources>
           <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
           <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
         </ListBox.Resources>
-        <ListBox.ItemContainerStyle>
-          <Style TargetType="{x:Type ListBoxItem}">
-            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-            <Setter Property="Template">
-              <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                  <Border x:Name="TemplateBorder" Width="350" Height="54"
-                           RenderTransformOrigin="0.5, 0.5" Margin="2"
-                          Background="BurlyWood" CornerRadius="10" BorderBrush="Black" BorderThickness="2">
-                    <Border.RenderTransform>
-                      <ScaleTransform/>
-                    </Border.RenderTransform>
-                    <ContentPresenter/>
-                  </Border>
-                  <ControlTemplate.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                      <Setter Property="RenderTransform">
-                        <Setter.Value>
-                          <ScaleTransform CenterX="185" CenterY="25"/>
-                        </Setter.Value>
-                      </Setter>
-                      <Trigger.EnterActions>
-                        <BeginStoryboard>
-                          <BeginStoryboard.Storyboard>
-                            <Storyboard>
-                              <DoubleAnimation
-                              Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleX)"
-                              To="1.04" Duration="0:0:0.12" >
-                              </DoubleAnimation>
-                              <DoubleAnimation
-                              Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleY)"
-                              To="1.04" Duration="0:0:0.12" >
-                              </DoubleAnimation>
-                            </Storyboard>
-                          </BeginStoryboard.Storyboard>
-                        </BeginStoryboard>
-                      </Trigger.EnterActions>
-                    </Trigger>
-                    <Trigger Property="IsSelected" Value="True">
-                      <Setter TargetName="TemplateBorder" Property="Background" Value="#FFF79800"/>
-                      <Setter Property="RenderTransform">
-                        <Setter.Value>
-                          <ScaleTransform CenterX="185" CenterY="25"/>
-                        </Setter.Value>
-                      </Setter>
-                    <Trigger.EnterActions>
-                      <BeginStoryboard>
-                        <BeginStoryboard.Storyboard>
-                          <Storyboard>
-                            <DoubleAnimation
-                              Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleX)"
-                              To="1.04" Duration="0:0:0.12" >
-                            </DoubleAnimation>
-                            <DoubleAnimation
-                              Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleY)"
-                              To="1.04" Duration="0:0:0.12" >
-                            </DoubleAnimation>
-                          </Storyboard>
-                        </BeginStoryboard.Storyboard>
-                      </BeginStoryboard>
-                    </Trigger.EnterActions>
-                    <Trigger.ExitActions>
-                        <BeginStoryboard>
-                          <BeginStoryboard.Storyboard>
-                            <Storyboard>
-                              <DoubleAnimation
-                              Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleX)"
-                              To="1" Duration="0:0:0.12" >
-                              </DoubleAnimation>
-                              <DoubleAnimation
-                              Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleY)"
-                              To="1" Duration="0:0:0.12" >
-                              </DoubleAnimation>
-                            </Storyboard>
-                          </BeginStoryboard.Storyboard>
-                        </BeginStoryboard>
-                      </Trigger.ExitActions>
-                    </Trigger>
-                  </ControlTemplate.Triggers>
-                </ControlTemplate>
-              </Setter.Value>
-            </Setter>
-          </Style>
-        </ListBox.ItemContainerStyle>
         <ListBox.ItemTemplate>
           <DataTemplate>
             <cardWars:CardControl/>
           </DataTemplate>
         </ListBox.ItemTemplate>
       </ListBox>
+      <Button Grid.Row="1" Content="End Turn" 
+              cal:Message.Attach="[Event Click] = [Action EndTurn()]"/>
     </Grid>
 
     <Grid Grid.Column="1">
@@ -281,7 +52,9 @@
         <RowDefinition Height="*"/>
         <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
-      <cardWars:PlayerControl Grid.Row="0" DataContext="{Binding Player1}" Margin="5"/>
+      <cardWars:PlayerControl Grid.Row="0" DataContext="{Binding Player1}" Margin="10"
+                              Width="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType=Grid}, 
+                        Path=ActualHeight, Converter={StaticResource DoubleMultiplierConverter},ConverterParameter=0.5}"/>
       <ItemsControl Grid.Row="1" ItemsSource="{Binding Tiles}" HorizontalAlignment="Center" VerticalAlignment="Center">
         <ItemsControl.ItemsPanel>
           <ItemsPanelTemplate>
@@ -289,7 +62,9 @@
           </ItemsPanelTemplate>
         </ItemsControl.ItemsPanel>
       </ItemsControl>
-      <cardWars:PlayerControl Grid.Row="2" DataContext="{Binding Player2}" Margin="5"/>
+      <cardWars:PlayerControl Grid.Row="2" DataContext="{Binding Player2}" Margin="10"
+                              Width="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType=Grid}, 
+                        Path=ActualHeight, Converter={StaticResource DoubleMultiplierConverter},ConverterParameter=0.5}"/>
     </Grid>
 
   </Grid>
