--- a/Hextasy.CardWars/Styles.xaml
+++ b/Hextasy.CardWars/Styles.xaml
@@ -1,8 +1,6 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:framework="clr-namespace:Hextasy.Framework;assembly=Hextasy.Framework"
-                    xmlns:cardWars="clr-namespace:Hextasy.CardWars"
-                    xmlns:cal="http://www.caliburnproject.org">
+﻿<ResourceDictionary 
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <ResourceDictionary.MergedDictionaries>
     <ResourceDictionary Source="Storyboards.xaml"/>
@@ -16,8 +14,8 @@
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ListBoxItem}">
           <Border x:Name="TemplateBorder" Width="350" Height="54"
-                           RenderTransformOrigin="0.5, 0.5" Margin="2"
-                          Background="BurlyWood" CornerRadius="10" BorderBrush="Black" BorderThickness="2">
+                  RenderTransformOrigin="0.5, 0.5" Margin="2"
+                  Background="BurlyWood" CornerRadius="10" BorderBrush="Black" BorderThickness="2">
             <Border.RenderTransform>
               <ScaleTransform/>
             </Border.RenderTransform>
