--- a/Hextasy.CardWars/TileControl.xaml
+++ b/Hextasy.CardWars/TileControl.xaml
@@ -39,7 +39,7 @@
           <Style.Triggers>
             <MultiDataTrigger>
               <MultiDataTrigger.Conditions>
-                <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.IsInCardPlacementMode}"
+                <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}, AncestorLevel=2}, Path=DataContext.IsInCardPlacementMode}"
                              Value="True"/>
                 <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=IsMouseOver}" Value="True"/>
                 <Condition Binding="{Binding IsFixed}" Value="False"/>
