added cards for kings
refactored some properties into other classes for better encapsulation
added settings for rows and columns
improved crown images to fit better into the tiles
improved placement of attack and health indication in tiles

--- a/Hextasy.CardWars/Styles.xaml
+++ b/Hextasy.CardWars/Styles.xaml
@@ -158,7 +158,7 @@
             <Trigger Property="IsMouseOver" Value="True">
               <Setter TargetName="Overlay" Property="Opacity" Value="0.5"/>
             </Trigger>
-            <MultiDataTrigger>
+            <MultiDataTrigger x:Name="CrosshairVisibilityTrigger">
               <MultiDataTrigger.Conditions>
                 <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.IsInTargetMode}"
                              Value="True"/>
